objects/Absence__c.object
<CustomObject>
    <description>Gives details of an absences on a YPs Attendance record</description>
    <fields>
        <fullName>Absence_on_PCKO_day__c</fullName>
        <formula>IF(
OR( Date_of_Absence__c =  Contact__r.Assigned_Wave__r.PC_KO_day__c  ,
Date_of_Absence__c =  Contact__r.Reserved_Wave__r.PC_KO_day__c )
, TRUE , FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Absence on PCKO day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Absences</relationshipLabel>
        <relationshipName>Absences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Time_YP_will_leave_NCS_Programme__c</fullName>
        <label>Date/Time YP will leave NCS Programme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_YP_will_return_toNCS_Programme__c</fullName>
        <label>Date/Time YP will return toNCS Programme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Absence__c</fullName>
        <label>Date of absence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Half_day_up_to__c</fullName>
        <label>Length of absence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Half day (2 - 4 hours)</fullName>
                </value>
                <value>
                    <fullName>Full day (4+ hours)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_YP_leaves_NCS_Programme__c</fullName>
        <label>How YP leaves NCS Programme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. The young person will leave on their own</fullName>
                </value>
                <value>
                    <fullName>2. Someone will collect the young person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Length_in_days__c</fullName>
        <formula>IF(ISPICKVAL( Half_day_up_to__c , &quot;Full day (4+ hours)&quot;),1,0.5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Length in days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Please provide details on how the YP will travel to/from the programme to/form the absence</inlineHelpText>
        <label>Travel Instructions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCKO__c</fullName>
        <formula>IF(ISBLANK( Contact__r.Assigned_Wave__c ), Contact__r.Reserved_Wave__r.PC_KO_day__c , Contact__r.Assigned_Wave__r.PC_KO_day__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PCKO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Part_of_NCS_programme_Absence_falls_in__c</fullName>
        <label>Part of NCS programme Absence falls in</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Part 1: Get active (staying away from home)</fullName>
                </value>
                <value>
                    <fullName>Part 2: Get involved (staying at home at night)</fullName>
                </value>
                <value>
                    <fullName>Part 3: Make your mark (staying at home at night)</fullName>
                </value>
                <value>
                    <fullName>Residential absence</fullName>
                </value>
                <value>
                    <fullName>Non-residential absence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_absence__c</fullName>
        <label>Reason for absence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Bereavement/funeral</fullName>
                </value>
                <value>
                    <fullName>2. Illness</fullName>
                </value>
                <value>
                    <fullName>3. Serious injury</fullName>
                </value>
                <value>
                    <fullName>4. Job interview</fullName>
                </value>
                <value>
                    <fullName>5. Commencement of employment</fullName>
                </value>
                <value>
                    <fullName>6. Sixth form college inductions</fullName>
                </value>
                <value>
                    <fullName>7. Religious Festivals</fullName>
                </value>
                <value>
                    <fullName>8. Exams</fullName>
                </value>
                <value>
                    <fullName>9. Wedding</fullName>
                </value>
                <value>
                    <fullName>10. Holiday</fullName>
                </value>
                <value>
                    <fullName>11. University open day</fullName>
                </value>
                <value>
                    <fullName>12. Party</fullName>
                </value>
                <value>
                    <fullName>13. Other programmes/courses</fullName>
                </value>
                <value>
                    <fullName>14. School graduations/proms</fullName>
                </value>
                <value>
                    <fullName>15. Collecting Exam Results (half a day or less)</fullName>
                </value>
                <value>
                    <fullName>16. Signing on</fullName>
                </value>
                <value>
                    <fullName>17. Court appearance</fullName>
                </value>
                <value>
                    <fullName>18. Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_by_PG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requested by PG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TCKO__c</fullName>
        <formula>IF(ISBLANK( Contact__r.Assigned_Wave__c ), Contact__r.Reserved_Wave__r.TC_KO_day__c , Contact__r.Assigned_Wave__r.TC_KO_day__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCKO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wave__c</fullName>
        <formula>IF(ISBLANK( Contact__r.Assigned_Wave__c ), Contact__r.Reserved_Wave__r.Name , Contact__r.Assigned_Wave__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wave</label>
        <type>Text</type>
    </fields>
    <label>Absence</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Absence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Absences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Absence_requires_date</fullName>
        <active>true</active>
        <errorConditionFormula>isblank( Date_of_Absence__c )</errorConditionFormula>
        <errorMessage>Absence requires a date</errorMessage>
    </validationRules>
</CustomObject>